<resources>
    <string name="app_name">ShoppingCart</string>
    <string name="action_settings">Settings</string>

    <string name="action_write">Write</string>
    <string name="action_read">Read</string>
    <string name="action_additem">Add Item</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_removeall">Remove All</string>
    <string name="action_removechecked">Remove Checked</string>


</resources>
