<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.fvtc.shoppingcart.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_write"
        android:orderInCategory="50"
        android:title="@string/action_write"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_read"
        android:orderInCategory="50"
        android:title="@string/action_read"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_additem"
        android:orderInCategory="50"
        android:title="@string/action_additem"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="50"
        android:title="@string/action_refresh"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_removeall"
        android:orderInCategory="50"
        android:title="@string/action_removeall"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_removechecked"
        android:orderInCategory="50"
        android:title="@string/action_removechecked"
        app:showAsAction="never" />







</menu>
